--- a/Block_EnginExt1.html
+++ b/Block_EnginExt1.html
@@ -29,21 +29,13 @@
   <div id="EnginExt1-div-src">
     <div class="enginext1-body">
       <div class="enginext1-header-line"></div>
-
       <div class="enginext1-content">
-        <div class="enginext1-left">
-          <div class="enginext1-left-group ">
-            <img src="media/climatization-unit.avif" class="enginext1-img1" />
-          </div>
-        </div>
-
-        <div class="enginext1-divider"></div>
 
         <div class="enginext1-right">
-            <div class="enginext1-empty-line-with-img">
+            <div class="enginext1-line-with-img">
+              <h2 lang-code="01501">Externá konštrukcia:</h2>
               <img src="media/air-conditioning-outdoor-unit-icon.png" alt="Ikona klimatizacnej jednotky">
             </div>
-              <h3 lang-code="01501">Externá konštrukcia:</h3>
               <p lang-code="01502">U našich zákazníkov realizujeme projekty:</p>
               <ul class="custom-list">
                 <li><strong lang-code="01503">klimatizačných jednotiek</strong></li>
@@ -53,9 +45,22 @@
               </ul>
               <p lang-code="01507">Tu pracujeme so systémami podľa požiadaviek zákazníka.</p>
             <div class="enginext1-more-info-container">
-              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01508">Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01508" style="
+                --text-color: #a8cfff;
+                --hover-color: #ffffff;
+                --underline-color: #ffffff;">
+				  Viac informácií</a>
             </div>
         </div>
+
+		<div class="enginext1-divider"></div>
+
+        <div class="enginext1-left">
+          <div class="enginext1-img-wrapper">
+            <img src="media/TurboDuchadlo-automobil.avif"/>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
