--- a/Block_EnginInt1.html
+++ b/Block_EnginInt1.html
@@ -28,14 +28,10 @@
 	<div id="EnginInt1-div-src">
 		<div class="enginint1-body">
 			<div class="enginint1-header-line"></div>
-			<!-- <p style="font-size:larger" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p> -->
-			<h2 style="font-weight: 200" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</h2>
+			<p class="enginint1-great-p" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p>
 
 			<div class="enginint1-content">
 				<div class="enginint1-left">
-					<!-- <div class="enginint1-left-inner">
-            <h2 lang-code="01102">Interná konštrukcia</h2>
-          </div> -->
 					<div class="enginint1-img-wrapper">
 						<img src="media/InternaKonstr-traja-monitor.avif" alt="Obrazok" />
 					</div>
