--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -38,7 +38,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="kontakt1-top-right"></div>
+				<div></div>
 			</div>
 
 			<!-- Spodná časť s pozadim a formularom -->
