--- a/Block_EnginElekt1.html
+++ b/Block_EnginElekt1.html
@@ -32,18 +32,18 @@
 
       <div class="enginelekt1-content">
         <div class="enginelekt1-left">
-          <!-- <div class="enginelekt1-left-group "> -->
-            <img src="media/motherboard-circuit-technology-background-gradient-green.avif" class="enginelekt1-img1" />
-          <!-- </div> -->
+          <div class="enginelekt1-img-wrapper ">
+            <img src="media/Plosny-spoj-s-vykresom.avif"/>
+          </div>
         </div>
 
         <div class="enginelekt1-divider"></div>
 
         <div class="enginelekt1-right">
-            <div class="enginelekt1-empty-line-with-img">
+            <div class="enginelekt1-line-with-img">
+              <h3 lang-code="01601">Elektro-konštrukcia</h3>
               <img src="media/plosny-spoj-icon.png" alt="Ikona plosneho spoja">
             </div>
-              <h3 lang-code="01601">Elektro projekcia</h3>
               <p lang-code="01602">V oblasti elektro Vás vieme podporiť v systéme 
                 <strong>EPLAN P8</strong> pri návrhu, plánovaní a optimalizácii 
                 elektrotechniky do Vašich strojov a zariadení </p>
@@ -52,7 +52,11 @@
                  <strong lang-code="01604">PCB  dizajn</strong>
                  <span>).</span></p>
             <div class="enginelekt1-more-info-container">
-              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01605">Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01605" style="
+                --text-color: #a8cfff;
+                --hover-color: #ffffff;
+                --underline-color: #ffffff;">
+				  Viac informácií</a>
             </div>
         </div>
       </div>
