--- a/Block_EnginInt3.html
+++ b/Block_EnginInt3.html
@@ -35,7 +35,7 @@
 			<div class="enginint3-content">
 				<div class="enginint3-left">
 					<div class="enginint3-img-wrapper">
-						<img src="media/InternaKonstrukcia-prechod.avif" class="enginint3-img1" />
+						<img src="media/InternaKonstrukcia-prechod.avif"/>
 					</div>
 				</div>
 
