--- a/Block_Ref.html
+++ b/Block_Ref.html
@@ -25,7 +25,7 @@
 		<div id="id-Block_Ref"></div>
 		<div class="ref-body">
 			<div class="ref-grid1">
-				<!-- Ľavý flex -->
+
 				<div class="ref-col">
 					<div class="ref-p1">
 						<img src="media/close-up-woman-electric-car.avif" alt="Automobilový priemysel" />
@@ -34,26 +34,26 @@
 					<div class="ref-t1">
 						<div class="ref-text">
 							<h2 lang-code="07013">.Automobilový priemysel</h2>
-							<p lang-code="07014">.Plne automatizované bunky a linky pre automobilový priemysel</p>
+							<span lang-code="07014">Plne automatizované bunky a linky pre automobilový priemysel</span>
+							<a href="indexRef.html#id-Block_Ref1" class="ref-button" lang-code="07019">Viac</a>
 						</div>
-						<a href="indexRef.html#id-Block_Ref1" class="ref-button" lang-code="07019">Viac</a>
 					</div>
 				</div>
 
-				<!-- Pravý flex -->
 				<div class="ref-col">
 					<div class="ref-t2">
 						<div class="ref-text">
 							<h2 lang-code="07011">.Letecký priemysel</h2>
-							<p lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</p>
+							<span lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</span>
+							<a href="indexRef.html#id-Block_Ref2" class="ref-button" lang-code="07019">Viac</a>
 						</div>
-						<a href="indexRef.html#id-Block_Ref2" class="ref-button" lang-code="07019">Viac</a>
 					</div>
 					<div class="ref-p2">
 						<img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" alt="Letecký priemysel" />
 						<div class="ref-triangle"></div>
 					</div>
 				</div>
+
 				<div class="ref-col">
 					<div class="ref-p1">
 						<img src="media/TriEskalatory.avif" alt="Všeobecné strojárstvo" />
@@ -62,18 +62,19 @@
 					<div class="ref-t1">
 						<div class="ref-text">
 							<h2 lang-code="07017">.Všeobecné strojárstvo</h2>
-							<p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
+							<span lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</span>
+							<a href="indexRef.html#id-Block_Ref3" class="ref-button" lang-code="07019">Viac</a>
 						</div>
-						<a href="indexRef.html#id-Block_Ref3" class="ref-button" lang-code="07019">Viac</a>
 					</div>
 				</div>
+
 				<div class="ref-col">
 					<div class="ref-t2">
 						<div class="ref-text">
 							<h2 lang-code="07015">.IT oblasť</h2>
-							<p lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</p>
+							<span lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</span>
+							<a href="indexRef.html#id-Block_Ref4" class="ref-button" lang-code="07019">Viac</a>
 						</div>
-						<a href="indexRef.html#id-Block_Ref4" class="ref-button" lang-code="07019">Viac</a>
 					</div>
 					<div class="ref-p2">
 						<img src="media/standard-quality-control-concept-m2.avif" alt="IT oblasť" />
