--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="root.css">
 	<link rel="stylesheet" href="animator.css">
 	<link rel="stylesheet" href="ref1.css">
-	<link rel="stylesheet" href="ref-ovl.css">
+	<link rel="stylesheet" href="ref-tooltip.css">
 
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
@@ -59,174 +59,113 @@
 
 				<!-- ************************************************************************ -->
 				<div class="ref1-right">
-					<div class="ref-ovl-grid columns-3">
+					<div class="ref-tooltip-grid columns-3">
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>zváracie a polohovacie prípravky</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Audi</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>zváracie a polohovacie prípravky</p>
+								<p class="ref-tooltip-company">Audi</p>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>zváracie a polohovacie prípravky</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">BMW</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>zváracie a polohovacie prípravky</p>
+								<div class="ref-tooltip-company">BMW</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>vývoj automobilových komponentov</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">EDAG</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>vývoj automobilových komponentov</p>
+								<div class="ref-tooltip-company">EDAG</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>podvozky a prevodové ústrojenstvo</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Magna Steyr</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>podvozky a prevodové ústrojenstvo</p>
+								<div class="ref-tooltip-company">Magna Steyr</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>výrobné zariadenia pre automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">TMS - Turnkey manufacturing systems</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>výrobné zariadenia pre automobilový priemysel</p>
+								<div class="ref-tooltip-company">TMS - Turnkey manufacturing systems</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>zváracie a polohovacie prípravky</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Audi</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/ford-logo-transp.png" alt="Ford logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Ford</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/ford-logo-transp.png" alt="Ford logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Ford</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/honda-logo-transp.png" alt="Honda logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Honda</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/honda-logo-transp.png" alt="Honda logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Honda</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Mercedes-Benz</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Mercedes-Benz</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Mini</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Mini</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/porsche-logo-transp.png" alt="Porsche logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Porsche</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/porsche-logo-transp.png" alt="Porsche logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Porsche</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/rolls-royce-logo-transp.png" alt="Rolls royce logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Rolls royce</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/rolls-royce-logo-transp.png" alt="Rolls royce logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Rolls royce</div>
-							</div>
-						</div>
-
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/volkswagen-logo-transp.png" alt="Volkswagen logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>automobilový priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Volkswagen</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/volkswagen-logo-transp.png" alt="Volkswagen logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automobilový priemysel</p>
+								<div class="ref-tooltip-company">Volkswagen</div>
 							</div>
 						</div>
 					</div>
