--- a/indexOnas.html
+++ b/indexOnas.html
@@ -92,6 +92,7 @@
 			await Footer_fill_ponuky();
 			await LoadTranslations('translations00.txt');
 			await LoadTranslations('translations01-engin.txt');
+			await LoadTranslations('translations07-ref.txt');
 			await LoadTranslations('translations09-foot.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
