--- a/Block_Onas2.html
+++ b/Block_Onas2.html
@@ -40,8 +40,8 @@
 					</p>
 					<!-- nový flex kontajner pre posledný odstavec + obrázok -->
 					<div class="onas2-left-last">
-						<p><span lang-code="00215">.V práci používame systém manažérstva bezpečnosti informácií</span><br>
-							<strong>STN EN ISO/IEC<br>27001:2022</strong>
+						<p><span lang-code="00215">.V práci používame systém manažérstva bezpečnosti informácií</span>
+							<strong><span style="white-space: nowrap;">STN EN ISO/IEC 27001:2022</span></strong>
 						</p>
 						<img src="media/CertificatedPQM.png" alt="Certificate PQM" class="onas2-official-stamp">
 					</div>
