--- a/Block_Kontakt3.html
+++ b/Block_Kontakt3.html
@@ -28,11 +28,12 @@
 			<div class="kontakt3-grid">
 				<div class="kontakt3-cell align-top" id="id-kontakt-Info">
 					<div class="align-top">
-						<p lang-code="05052">.Všeobecný kontakt:</p>
+						<p lang-code="05056">.Personálne oddelenie:</p>
+						<p>&nbsp;</p>
 					</div>
 					<div class="align-bottom">
-						<p>+421 XXX XXX XXX</p>
-						<p>info@enitech.sk</p>
+						<p>Ing. Lucia Hollá</p>
+						<p>holla@enitech.sk</p>
 					</div>
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Deak">
@@ -58,7 +59,7 @@
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Ivaska">
 					<div class="align-top">
-						<p lang-code="05054">.Externá konštrukcia a IT služby:</p>
+						<p lang-code="05055">.Externá konštrukcia a IT služby:</p>
 					</div>
 					<div class="align-bottom">
 						<p>Ing. Jaroslav Ivaška</p>
@@ -69,9 +70,9 @@
 			</div>
 
 			<div class="kontakt3-grid-img">
-				<div class="kontakt3-cell align-top" id="id-kontakt-Holla" style="grid-row: 1;"> <!-- umiestni sa do riadku 2 -->
+				<!-- <div class="kontakt3-cell align-top" id="id-kontakt-Holla" style="grid-row: 1;">
 					<div class="align-top">
-						<p lang-code="05055">.Personálne oddelenie:</p>
+						<p lang-code="05056">.Personálne oddelenie:</p>
 						<p>&nbsp;</p>
 					</div>
 					<div class="align-bottom">
@@ -79,10 +80,24 @@
 						<p>+421 XXX XXX XXX</p>
 						<p>holla@enitech.sk</p>
 					</div>
+				</div> -->
+				<!-- <div class="kontakt3-cell-img" style="grid-row: 1 / 3;"> -->
+				<!-- zacni v 1.riadku a natiahni sa az do zaciatku 3.riadku (cize zaberie 2 riadky) -->
+				<div class="kontakt3-cell-img img-special-span">
+					<img class="kontakt3-image" src="media/Neoholeny-ZelenyText.avif" alt="Ilustračný obrázok" />
+					<!-- <img class="kontakt3-image" src="media/working-from-home-time-management-concept.avif" alt="Ilustračný obrázok" /> -->
 				</div>
-				<div class="kontakt3-cell-img" style="grid-row: 1 / 3;"> <!-- zacni v 1.riadku a natiahni sa az do zaciatku 3.riadku (cize zaberie 2 riadky) -->
-					<img class="kontakt3-image" src="media/working-from-home-time-management-concept.avif" alt="Ilustračný obrázok" />
-				</div>
+			</div>
+			<div class="kontakt3-invoice-data">
+				<p class="section-title" lang-code="05061">Fakturačné údaje</p>
+				<p><span class="label" lang-code="05062">IČO:</span><span class="value">45 468 397</span></p>
+				<p><span class="label" lang-code="05063">IČ DPH:</span><span class="value">SK 2023009076</span></p>
+				<div class="line-gap"></div>
+				<p><span class="label" lang-code="05064">Bankové spojenie:</span><span class="value" lang-code="05065">Slovenská sporiteľňa, a. s., Nová Dubnica</span><p>
+				<p><span class="label" lang-code="05066">Číslo účtu:</span><span class="value">SK07 0900 0000 0003 6448 6398</span></p>
+				<p><span class="label" lang-code="05067">Registrácia:</span>
+					<span class="value" lang-code="05068">Zapísaný v Obchodnom registri Okresného súdu v Trenčíne, oddiel: Sro, vložka 22788/R</span>
+				</p>
 			</div>
 		</div>
 	</div>
