--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -81,7 +81,8 @@
 
 				<div class="ref2-left">
 					<div class="ref2-left-group ">
-						<img src="media/Aeroplan-spredu.avif" class="ref2-img1" />
+						<img src="media/Copilot_ModreLietadlo3D_future.avif" class="ref2-img1" />
+						<!-- <img src="media/Aeroplan-spredu.avif" class="ref2-img1" /> -->
 						<!-- <img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" class="ref2-img1" /> -->
 					</div>
 					<div style="text-align: right;">
